# SCI-Solver_Level-Set

./: .gitignore  Makefile  README.md
example_data/: aorta.ele  cube_unstruc_size256_s2.ele  cube_unstruc_size256_s2.node
include/: Vec.h  meshFIM.h  meshFIM_kernels.h  mycutil.h  tetmesh.h  types.h
levelset/: levelset.cu
metis-4.0.3/: Makefile  graphchk  kmetis  mesh2dual  mesh2nodal  oemetis  onmetis  partdmesh  partnmesh  pmetis
metis-4.0.3/Lib/: balance.c  ccgraph.c  coarsen.c  compress.c  debug.c  defs.h  estmem.c  fm.c  fortran.c  frename.c  graph.c  initpart.c  kmetis.c  kvmetis.c  kwayfm.c  kwayrefine.c  kwayvolfm.c  kwayvolrefine.c  macros.h  match.c  mbalance.c  mbalance2.c  mcoarsen.c  memory.c  meshpart.c  metis.h  mfm.c  mfm2.c  mincover.c  minitpart.c  minitpart2.c  mkmetis.c  mkwayrefine.c  mmatch.c  mmd.c  mpmetis.c  mrefine2.c  mutil.c  myqsort.c  ometis.c  (+11 more)
metis-4.0.3/Programs/: graphchk.c  io.c  kmetis.c  mesh2dual.c  mesh2nodal.c  oemetis.c  onmetis.c  partdmesh.c  partnmesh.c  pmetis.c  smbfactor.c
metis-4.0.3/Test/: mtest.c
nbproject/: Package-Default.bash  configurations.xml  project.xml
src/: CMakeLists.txt  CTestConfig.cmake  LevelSet.cu  LevelSet.h  meshFIM.cu  tetmesh.cu
src/core/: CMakeLists.txt
src/core/cuda/: meshFIM.cu  redistance.cu  tetgen.cu  tetmesh.cu
src/core/include/: LevelSet.h  kernels.h  meshFIM.h  myerror.h  mytimer.h  redistance.h  redistance_kernels.h  tetgen.h  tetmesh.h
src/core2d/: CMakeLists.txt
src/core2d/cuda/: ICP.cu  TriMesh_connectivity.cpp  TriMesh_connectivity.cu  TriMesh_curvature.cu  TriMesh_io.cu  TriMesh_tstrips.cu  diffuse.cu  edgeflip.cu  faceflip.cu  filter.cpp  filter.cu  lmsmooth.cu  meshFIM2d.cpp  meshFIM2d.cu  noise.cu  redistance.cu  subdiv.cu
src/core2d/include/: LevelSet2d.h  TriMesh.h  Vec.h  lineqn.h  meshFIM2d.h  meshFIM2d_kernels.h  mycutil.h  myerror.h  noise.h  redistance.h  redistance_kernels.h  timer.h  types.h
src/core3d/: CMakeLists.txt
src/core3d/cuda/: meshFIM.cu  meshFIM3d.cu  redistance.cu  redistance3d.cu  tetgen.cu  tetmesh.cu
src/core3d/include/: LevelSet.h  LevelSet3d.h  meshFIM.h  meshFIM3d.h  meshFIM_kernels.h  myerror.h  redistance.h  redistance3d.h  redistance_kernels.h  redistance_kernels3d.h  tetgen.h  tetmesh.h  types.h
src/examples/: CMakeLists.txt  example1.cu  example2.cu
src/test/: CMakeLists.txt
src/test/test_data/: CubeMesh_size256step8_correct.node  SquareMesh_size16.ply  aorta.node  pyramid.ele  pyramid.node  sphere334.ele  sphere334.node  sphere_1154verts.ply  torus.ele  torus.node  torus.ply
