include_directories(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${METIS_PATH}/Lib
)

FILE(GLOB CORE_CUDA_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/cuda/*.c*")
FILE(GLOB CORE_CUDA_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")

CUDA_ADD_LIBRARY(LEVELSET-2D_CORE STATIC ${CORE_CUDA_SOURCES} ${CORE_CUDA_HEADERS})
ADD_DEPENDENCIES(LEVELSET-2D_CORE metis)
ADD_DEPENDENCIES(LEVELSET-2D_CORE cusp)
if (CMAKE_SYSTEM_NAME MATCHES "Linux")
  TARGET_LINK_LIBRARIES(LEVELSET-2D_CORE -ldl ${METIS_LIBRARY})
else()
  TARGET_LINK_LIBRARIES(LEVELSET-2D_CORE ${METIS_LIBRARY})
endif()
