# Eikonal2D EXTERNAL
set(EIKONAL2D_INSTALL_DIR "${EXTERNAL_DIR}/eikonal2d")
ExternalProject_Add( eikonal2d
  PREFIX "${EIKONAL2D_INSTALL_DIR}"
  GIT_REPOSITORY "https://github.com/SCIInstitute/SCI-Solver_Eikonal.git/tree/master/src/core2d"
  INSTALL_DIR "${EIKONAL2D_INSTALL_DIR}/include"
  BINARY_DIR "${EIKONAL2D_INSTALL_DIR}/lib"
  INSTALL_COMMAND ""
  )
ExternalProject_Add_Step( eikonal2d copy_deps
  COMMAND ${CMAKE_COMMAND} -E copy_directory ${EIKONAL2D_INSTALL_DIR}/src/eikonal2d/include ${EIKONAL2D_INSTALL_DIR}/include
  DEPENDEES install
)
include_directories("${EIKONAL2D_INSTALL_DIR}/include")
FILE(GLOB EIKONAL2D_LIBRARY ${EIKONAL2D_INSTALL_DIR}/lib/*)

include_directories(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${METIS_PATH}/Lib
)

FILE(GLOB CORE_CUDA_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/cuda/*.c*")
FILE(GLOB CORE_CUDA_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")

CUDA_ADD_LIBRARY(LEVELSET-2D_CORE STATIC ${CORE_CUDA_SOURCES} ${CORE_CUDA_HEADERS})
ADD_DEPENDENCIES(LEVELSET-2D_CORE metis)
ADD_DEPENDENCIES(LEVELSET-2D_CORE cusp)
ADD_DEPENDENCIES(LEVELSET-2D_CORE eikonal2d)
if (CMAKE_SYSTEM_NAME MATCHES "Linux")
  TARGET_LINK_LIBRARIES(LEVELSET-2D_CORE -ldl ${METIS_LIBRARY})
else()
  TARGET_LINK_LIBRARIES(LEVELSET-2D_CORE ${METIS_LIBRARY})
endif()
