# Eikonal3D EXTERNAL
set(EIKONAL3D_INSTALL_DIR "${EXTERNAL_DIR}/eikonal3d")
ExternalProject_Add( eikonal3d
  PREFIX "${EIKONAL3D_INSTALL_DIR}"
  GIT_REPOSITORY "https://github.com/SCIInstitute/SCI-Solver_Eikonal.git/tree/master/src/core3d"
  INSTALL_DIR "${EIKONAL3D_INSTALL_DIR}/include"
  BINARY_DIR "${EIKONAL3D_INSTALL_DIR}/lib"
  INSTALL_COMMAND ""
  )
ExternalProject_Add_Step( eikonal3d copy_deps
  COMMAND ${CMAKE_COMMAND} -E copy_directory ${EIKONAL3D_INSTALL_DIR}/src/eikonal3d/include ${EIKONAL3D_INSTALL_DIR}/include
  DEPENDEES install
)
include_directories("${EIKONAL3D_INSTALL_DIR}/include")
FILE(GLOB EIKONAL3D_LIBRARY ${EIKONAL3D_INSTALL_DIR}/lib/*)

include_directories(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${METIS_PATH}/Lib
)

FILE(GLOB CORE_CUDA_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/cuda/*.cu")
FILE(GLOB CORE_CUDA_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")

CUDA_ADD_LIBRARY(LEVELSET-3D_CORE STATIC ${CORE_CUDA_SOURCES} ${CORE_CUDA_HEADERS})
ADD_DEPENDENCIES(LEVELSET-3D_CORE metis)
ADD_DEPENDENCIES(LEVELSET-3D_CORE cusp)
ADD_DEPENDENCIES(LEVELSET-3D_CORE eikonal3d)
if (CMAKE_SYSTEM_NAME MATCHES "Linux")
  TARGET_LINK_LIBRARIES(LEVELSET-3D_CORE -ldl ${METIS_LIBRARY})
else()
  TARGET_LINK_LIBRARIES(LEVELSET-3D_CORE ${METIS_LIBRARY})
endif()
