include_directories(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${METIS_PATH}/Lib
)

FILE(GLOB CORE_CUDA_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/cuda/*.cu")
FILE(GLOB CORE_CUDA_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")

CUDA_ADD_LIBRARY(LEVELSET-3D_CORE STATIC ${CORE_CUDA_SOURCES} ${CORE_CUDA_HEADERS})
ADD_DEPENDENCIES(LEVELSET-3D_CORE eikonal)
if (CMAKE_SYSTEM_NAME MATCHES "Linux")
  TARGET_LINK_LIBRARIES(LEVELSET-3D_CORE -ldl ${EIKONAL_LIBRARIES})
else()
  TARGET_LINK_LIBRARIES(LEVELSET-3D_CORE ${EIKONAL_LIBRARIES})
endif()
