project(Examples)

include_directories(
  "${CMAKE_SOURCE_DIR}/core2d/include"
  "${CMAKE_SOURCE_DIR}/core3d/include"
)

CUDA_ADD_EXECUTABLE(Example1 example1.cu)
TARGET_LINK_LIBRARIES(Example1 LEVELSET-3D_CORE ${EIKONAL_LIBRARIES})
CUDA_ADD_EXECUTABLE(Example2 example2.cu)
TARGET_LINK_LIBRARIES(Example2 LEVELSET-2D_CORE ${EIKONAL_LIBRARIES})
